; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_movenc.c_mov_write_trkn_tag.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_movenc.c_mov_write_trkn_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_6__ = type { i8* }

@.str = private unnamed_addr constant [5 x i8] c"disc\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"track\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"disk\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"trkn\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"data\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, %struct.TYPE_5__*, i32)* @mov_write_trkn_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mov_write_trkn_tag(i32* %0, i32* %1, %struct.TYPE_5__* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_6__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %7, align 8
  store i32 %3, i32* %8, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* %8, align 4
  %18 = icmp ne i32 %17, 0
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0)
  %21 = call %struct.TYPE_6__* @av_dict_get(i32 %16, i8* %20, i32* null, i32 0)
  store %struct.TYPE_6__* %21, %struct.TYPE_6__** %9, align 8
  store i32 0, i32* %10, align 4
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %23 = icmp ne %struct.TYPE_6__* %22, null
  br i1 %23, label %24, label %29

24:                                               ; preds = %4
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i32 0, i32 0
  %27 = load i8*, i8** %26, align 8
  %28 = call i32 @atoi(i8* %27)
  br label %30

29:                                               ; preds = %4
  br label %30

30:                                               ; preds = %29, %24
  %31 = phi i32 [ %28, %24 ], [ 0, %29 ]
  store i32 %31, i32* %11, align 4
  %32 = load i32, i32* %11, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %72

34:                                               ; preds = %30
  store i32 0, i32* %12, align 4
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %9, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load i8*, i8** %36, align 8
  %38 = call i8* @strchr(i8* %37, i8 signext 47)
  store i8* %38, i8** %13, align 8
  %39 = load i8*, i8** %13, align 8
  %40 = icmp ne i8* %39, null
  br i1 %40, label %41, label %45

41:                                               ; preds = %34
  %42 = load i8*, i8** %13, align 8
  %43 = getelementptr inbounds i8, i8* %42, i64 1
  %44 = call i32 @atoi(i8* %43)
  store i32 %44, i32* %12, align 4
  br label %45

45:                                               ; preds = %41, %34
  %46 = load i32*, i32** %5, align 8
  %47 = call i32 @avio_wb32(i32* %46, i32 32)
  %48 = load i32*, i32** %5, align 8
  %49 = load i32, i32* %8, align 4
  %50 = icmp ne i32 %49, 0
  %51 = zext i1 %50 to i64
  %52 = select i1 %50, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0)
  %53 = call i32 @ffio_wfourcc(i32* %48, i8* %52)
  %54 = load i32*, i32** %5, align 8
  %55 = call i32 @avio_wb32(i32* %54, i32 24)
  %56 = load i32*, i32** %5, align 8
  %57 = call i32 @ffio_wfourcc(i32* %56, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %58 = load i32*, i32** %5, align 8
  %59 = call i32 @avio_wb32(i32* %58, i32 0)
  %60 = load i32*, i32** %5, align 8
  %61 = call i32 @avio_wb32(i32* %60, i32 0)
  %62 = load i32*, i32** %5, align 8
  %63 = call i32 @avio_wb16(i32* %62, i32 0)
  %64 = load i32*, i32** %5, align 8
  %65 = load i32, i32* %11, align 4
  %66 = call i32 @avio_wb16(i32* %64, i32 %65)
  %67 = load i32*, i32** %5, align 8
  %68 = load i32, i32* %12, align 4
  %69 = call i32 @avio_wb16(i32* %67, i32 %68)
  %70 = load i32*, i32** %5, align 8
  %71 = call i32 @avio_wb16(i32* %70, i32 0)
  store i32 32, i32* %10, align 4
  br label %72

72:                                               ; preds = %45, %30
  %73 = load i32, i32* %10, align 4
  ret i32 %73
}

declare dso_local %struct.TYPE_6__* @av_dict_get(i32, i8*, i32*, i32) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @avio_wb32(i32*, i32) #1

declare dso_local i32 @ffio_wfourcc(i32*, i8*) #1

declare dso_local i32 @avio_wb16(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
